--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,31 +13,14 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="#">
-              Start Bootstrap
-            </a>
+            <a href="/">Todo List App</a>
           </li>
-          <li>
-            <a href="#">Dashboard</a>
-          </li>
-          <li>
-            <a href="#">Shortcuts</a>
-          </li>
-          <li>
-            <a href="#">Overview</a>
-          </li>
-          <li>
-            <a href="#">Events</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Services</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
+
+          <% TodoList.all.each do |todo_list| %>
+            <li>
+              <%= link_to todo_list.name, todo_list_todo_items_path(todo_list) %>
+            </li>
+          <% end %>
         </ul>
       </div>
       <div id="page-content-wrapper">
