Change font style of the title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,8 @@ div#home {
 ul.sidebar-nav > li.sidebar-brand {
   a {
     color: $color5 !important;
+    font-family: 'Indie Flower', sans-serif;
+    font-size: 2.2em;
   }
 }
 
