--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,13 +1,13 @@
 <div class="list-container">
   <div class="row">
-    <%= text_field_tag "todo_item[content]", '', placeholder: 'Add Item', data: { url: todo_list_todo_items_path(@todo_list), remote: true, method: :post } %>
+    <%= text_field_tag "todo_item[content]", '', placeholder: 'Add an item and press enter...', data: { url: todo_list_todo_items_path(@todo_list), remote: true, method: :post } %>
   </div>
   
   <div class="row">
     <ul id="items">
       <% @todo_list.todo_items.each do |todo_item| %>
         <%= todo_item_tag(todo_item) %>
-          <% end %>
+      <% end %>
     </ul>
   </div>
 </div>
