Link and input to add lists

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,16 @@
           <li class="sidebar-brand">
             <a href="/">To-do List</a>
           </li>
-
           <% TodoList.all.each do |todo_list| %>
             <li class="<%= @todo_list.present? && @todo_list == todo_list ? 'selected' : '' %>">
               <%= link_to todo_list.name, todo_list_todo_items_path(todo_list) %>
             </li>
+          <% end %>
+          <%= form_tag(controller: 'todo_lists', action: 'create', method: 'post') do %>
+            <div class="row add-list">
+              <a id="add-list-link">Add List +</a>
+              <%= text_field_tag "todo_list[name]", '', placeholder: 'Type the name and press enter...' %>
+            </div>
           <% end %>
         </ul>
       </div>
@@ -52,6 +57,19 @@
         });
         $("#todo_item_content").focus(function (e) {
           $("ul#items>li").removeClass('selected');
+        });
+        $(".add-list>a").click(function (e) {
+          e.preventDefault();
+          $(".add-list>a").hide();
+          $(".add-list>input").show();
+          $(".add-list>input").focus();
+        });
+        $(".add-list>input").keyup(function (e) {
+          if (e.keyCode == 27) {
+            $(".add-list>input").val('');
+            $(".add-list>input").hide();
+            $(".add-list>a").show();
+          }
         });
       });
     </script>
