--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,6 +149,24 @@ ul#items {
   }
 }
 
+.add-list {
+  margin: 10px;
+  a {
+    margin-left: 10px;
+    color: $color5 !important;
+    cursor: pointer;
+  }
+  input {
+    display: none;
+    width: 100%;
+    font-size: 0.9em;
+    border-radius: 4px;
+    border-style: none;
+    height: 30px;
+    padding-left: 5px;
+  }
+}
+
 .done {
   text-decoration: line-through;
 }
