Remove todo item

--- a/app/views/todo_lists/_list.html.erb
+++ b/app/views/todo_lists/_list.html.erb
@@ -2,7 +2,7 @@
   <li class="todo-list-item<%= @todo_list.present? && @todo_list == todo_list ? ' selected' : '' %>">
     <%= link_to todo_list.name, todo_list_todo_items_path(todo_list), class: 'list-name' %>
     <%= link_to todo_list_path(todo_list), method: :delete, class: 'remove-list' do %>
-      <%= image_tag('/delete-icon.png') %>
+      <%= image_tag('/delete-icon-list.png') %>
     <% end %>
   </li>
 <% end %>
