--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,13 +139,20 @@ ul#items {
     display: inline-block;
     width: 100%;
     input[type="checkbox"] {
+      float: left;
+      margin-top: 5px;
+      margin-right: 10px;
+    }
+    a {
       float: right;
-      margin-top: 3.5px;
-      margin-right: 3px;
+      display: none;
     }
   }
   li.selected {
     background-color: $color6;
+    a {
+      display: block;
+    }
   }
 }
 
@@ -165,6 +172,12 @@ ul#items {
     img {
       width: 20px;
     }
+  }
+}
+
+.todo-list-item:hover {
+  .remove-list {
+    display: inline;
   }
 }
 
