--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,14 +143,35 @@ ul#items {
       margin-top: 5px;
       margin-right: 10px;
     }
+    input[type="text"] {
+      width: 80%;
+      background-color: $color2;
+      margin: 0;
+      padding: 0;
+      border: 1px solid $color3;
+      display: none;
+    }
     a {
       float: right;
+      display: none;
+      img {
+        margin-right: 0;
+      }
+    }
+    img {
+      cursor: pointer;
+      float: right;
+      margin-right: 10px;
+      margin-top: 2px;
       display: none;
     }
   }
   li.selected {
     background-color: $color6;
     a {
+      display: block;
+    }
+    img {
       display: block;
     }
   }
