--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           <%= render 'todo_lists/list' %>
           <%= render 'todo_lists/form' %>
         </ul>
+        <%= render 'layouts/footer' %>
       </div>
       <div id="toggle_menu" class="active">
         <div id='toggle_menu_top'></div>
