--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,11 +194,25 @@ ul#items {
 }
 
 .todo-list-item {
+  input {
+    display: none;
+    padding: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 30px;
+    border-radius: 4px;
+    border-style: none;
+    width: 190px;
+  }
+  .edit-list {
+    cursor: pointer;
+    display: none;
+  }
   .list-name {
     text-indent: 20px;
     position: relative;
     display: inline-block;
-    width: 88%;
+    width: 80%;
     margin: 0;
     padding: 0;
   }
@@ -213,7 +227,7 @@ ul#items {
 }
 
 .todo-list-item:hover {
-  .remove-list {
+  .remove-list, .edit-list {
     display: inline;
   }
 }
