--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(controller: 'todo_lists', action: 'create', method: 'post') do %>
+<%= form_tag(todo_lists_path, method: 'post') do %>
   <div class="row add-list">
     <a id="add-list-link">Add List +</a>
     <%= text_field_tag "todo_list[name]", '', placeholder: 'Type the name and press enter...' %>
